--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <li><a href="https://www.twitter.com/zoecodes">Twitter</a></li>
         <li><a href="https://www.twitter.com/zoejokes">Other Twitter</a></li>
         <li><a href="https://tinyletter.com/higuesswhat">Newsletter</a></li>
-        <!-- <li><a href="https://www.lariat.work">Art project</a></li> -->
-        <li><a href="./zoe-daniels-cv-2019.pdf">Download CV</a></li>
+        <li><a href="https://www.lariat.work">lariat.work</a></li>
+        <li><a href="./zoe-daniels-cv-2023.pdf">Download CV</a></li>
       </ul>
     </nav>
   </main>
